--- a/public/popout.html
+++ b/public/popout.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html >
-<style>
-body {
-    height: 100%;
-}
-.flexlayout__layout { /* required for flexlayout sublayouts */
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    overflow:hidden;
-}
-</style>
-<head>
-    <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
+<html>
+  <style>
+    body {
+      height: 100%;
+    }
+    .flexlayout__layout {
+      /* required for flexlayout sublayouts */
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      overflow: hidden;
+    }
+  </style>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>FlexLayout Popout</title>
-</head>
-<body>
-</body>
+    <script
+      type="text/javascript"
+      src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
+    ></script>
+  </head>
+  <body></body>
 </html>
